# jax-tpu-embedding

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  BUILD.bazel  CHANGELOG.md  README.md  SECURITY.md  WORKSPACE  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: README.md  build_and_test.yml  cloud-tpu-ci-presubmit.yml  lint.yml  stale.yml  tpu_presubmit.yml  tpu_test.yml
docs/: conf.py  embedding.rst  input_processing.rst  parameters.rst
docs/advanced/: checkpointing.rst
jax_tpu_embedding/: BUILD  WORKSPACE  __init__.py  build_defs.bzl  checkpoint.py  config_utils.py  coordination_service_utils.py  input_utils.py  jax_tpu_embedding.bzl  jte.bzl  pytype_utils.py  tpu_embedding.py  tpu_embedding_utils.py
jax_tpu_embedding/examples/: BUILD  input_utils_test.py  jax_tpu_embedding_singlehost_pjit.ipynb  jax_tpu_embedding_singlehost_pmap.ipynb  pmap_example.py  singlehost_pjit_example.py  test_utils.py
jax_tpu_embedding/pip_package/: Dockerfile  README  README.md  build.sh  build_pip_pkg.sh  cloudbuild-presubmit.yaml  cloudbuild.yaml  collect_wheels.sh  presubmit.Dockerfile  setup.py
jax_tpu_embedding/scripts/: export_tpu_pod_env.sh
jax_tpu_embedding/sparsecore/: BUILD  __init__.py  configure_file.bzl  jax_tpu_embedding.bzl  tpu.bzl  version.py.in
jax_tpu_embedding/sparsecore/docs/: conf.py  developer.rst  embedding.rst  index.rst  input_processing.rst  overview.rst  parameters.rst  requirements.txt
jax_tpu_embedding/sparsecore/docs/advanced/: checkpointing.rst  embedding_pipelining.rst  fdo.rst  minibatching.rst  optimizers.rst  stacking.rst
jax_tpu_embedding/sparsecore/docs/tutorials/: shakespeare_flax.ipynb  shakespeare_flax.md  shakespeare_primitives.ipynb  shakespeare_primitives.md
jax_tpu_embedding/sparsecore/examples/models/shakespeare/: BUILD  config.py  dataset.py  flax_model.py  flax_nnx_model.py  model.py
jax_tpu_embedding/sparsecore/examples/shakespeare/: BUILD  README.md  jax_sc_shakespeare_jit.py  jax_sc_shakespeare_jit_flax_nnx.py  jax_sc_shakespeare_pipelined_jit_test.py  jax_sc_shakespeare_pmap.py
jax_tpu_embedding/sparsecore/examples/shakespeare/testdata/: README.md  checkpoint-2x2x2.tgz  converted-2x2x1.tgz
jax_tpu_embedding/sparsecore/lib/: BUILD
jax_tpu_embedding/sparsecore/lib/auto_pipelining/: BUILD  auto_pipelining.py  decompose.py  preprocess.py  utils.py
jax_tpu_embedding/sparsecore/lib/auto_pipelining/tests/: BUILD  auto_pipelining_test.py
jax_tpu_embedding/sparsecore/lib/checkpointing/: BUILD  checkpoint_utils.py  checkpoint_utils_test.py
jax_tpu_embedding/sparsecore/lib/core/: BUILD  abstract_input_batch.h  all_reduce_interface.h  constants.py  coo_format.h  extract_sort_and_group_benchmark.cc  fake_all_reduce.cc  fake_all_reduce.h  fake_all_reduce_test.cc  fdo_types.cc  fdo_types.h  input_preprocessing.cc  input_preprocessing.h  input_preprocessing.py  input_preprocessing_cc_test.py  input_preprocessing_py_util.cc  input_preprocessing_py_util.h  input_preprocessing_test.cc  input_preprocessing_test.py  input_preprocessing_threads.cc  input_preprocessing_threads.h  input_preprocessing_threads_test.cc  input_preprocessing_util.cc  input_preprocessing_util.h  input_preprocessing_util_test.cc  input_preprocessing_with_mini_batching.cc  input_preprocessing_with_mini_batching.h  minibatching_splits_impl.h  minibatching_splits_test.cc  minibatching_sync_service.h  minibatching_sync_service_test.cc  minibatching_test_utils.h  numpy_input_batch.cc  numpy_input_batch.h  partitioned_coo_tensors.h  partitioned_coo_tensors_test.cc  pjrt_all_reduce.cc  pjrt_all_reduce.h  process_coo_tensors_impl.h  pybind_input_preprocessing.cc  (+16 more)
jax_tpu_embedding/sparsecore/lib/core/benchmarks/: BUILD  extract_sort_and_group_benchmark.cc  input_preprocessing_benchmark.cc
jax_tpu_embedding/sparsecore/lib/core/grpc/: BUILD  all_reduce.proto  all_reduce_interface.cc  all_reduce_interface.h  all_reduce_service_impl.cc  all_reduce_service_impl.h  all_reduce_simulation_test.cc  all_reduce_test.cc  grpc_credentials.h  minibatching_node.h
jax_tpu_embedding/sparsecore/lib/core/input/: BUILD  input_formats.h  numpy.cc  numpy.h
jax_tpu_embedding/sparsecore/lib/core/primitives/: BUILD  local_sparse_dense_matmul.py  local_sparse_dense_matmul_csr.py  optimizers_computation.py  sparse_dense_matmul_activation_unstack.py  sparse_dense_matmul_csr.py  sparse_dense_matmul_csr_with_mini_batching.py  sparse_dense_matmul_grad_with_adagrad.py  sparse_dense_matmul_grad_with_adagrad_momentum.py  sparse_dense_matmul_grad_with_adagrad_with_mini_batching.py  sparse_dense_matmul_grad_with_adam.py  sparse_dense_matmul_grad_with_f2a.py  sparse_dense_matmul_grad_with_ftrl.py  sparse_dense_matmul_grad_with_laprop.py  (+5 more)
jax_tpu_embedding/sparsecore/lib/fdo/: BUILD  csv_file_fdo_client.py  csv_file_fdo_client_test.py  fdo_client.py  fdo_utils.py  file_fdo_client.py  file_fdo_client_test.py
jax_tpu_embedding/sparsecore/lib/flax/: BUILD  embed.py  embed_optimizer.py  embed_pipelining.py
jax_tpu_embedding/sparsecore/lib/nn/: BUILD  embedding.py  embedding_pipelining_utils.py  embedding_proto_utils.py  embedding_spec.py  embedding_utils.py  embedding_with_mini_batching.py  table_stacking.py
jax_tpu_embedding/sparsecore/lib/proto/: BUILD  __init__.py  embedding_spec.proto
jax_tpu_embedding/sparsecore/tests/: BUILD  jax2tf_tpu_test.py  jax_sc_shakespeare_tests.py  jax_spmd_tc_with_sc_tests.py  version_test.py
jax_tpu_embedding/sparsecore/utils/: BUILD  utils.py  utils_test.py
jax_tpu_embedding/tests/: input_utils_test.py  jax_tpu_embedding_test.py  test_utils.py
tools/: BUILD.bazel  build_wheel.py  docker_build_wheel.sh  install_bazelisk.sh  local_build_wheel.sh
(+96 files in other folders)
