[project]
name = "jax_tpu_embedding"
description = "JAX SparseCore API"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "JAX SC Authors", email="jax-sc-dev@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "Intended Audience :: Science/Research",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
keywords = ["jax", "tpu", "embedding", "sparsecore", "machine learning", "sparse tensor", "distributed computing"]
dependencies = [
    'absl-py',
    'einops',
    'flax',
    'jax',
    'numpy',
    'portpicker'
]

# `version` is set by setuptools to use `jax_tpu_embedding.sparsecore.__version__`.
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/jax-ml/jax-tpu-embedding"
repository = "https://github.com/jax-ml/jax-tpu-embedding"
issue_tracker = "https://github.com/jax-ml/jax-tpu-embedding/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "jax_tpu_embedding.sparsecore.__version__"}

[tool.setuptools.packages.find]
include = ["jax_tpu_embedding*"]

[tool.setuptools.package-data]
"*" = ["*.dylib", "*.so", "*.pyd"]
