[project]
name = "jax_tpu_embedding"
description = "JAX SparseCore API"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{name = "JAX SC Authors", email="jax-sc-dev@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "Intended Audience :: Science/Research",
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
keywords = ["jax", "tpu", "embedding", "sparsecore", "machine learning", "sparse tensor", "distributed computing"]
dependencies = [
    'absl-py',
    'einops',
    'flax',
    'jax',
    'numpy',
    'portpicker'
]

# `version` is set by setuptools to use `jax_tpu_embedding.sparsecore.__version__`.
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/jax-ml/jax-tpu-embedding"
repository = "https://github.com/jax-ml/jax-tpu-embedding"
issue_tracker = "https://github.com/jax-ml/jax-tpu-embedding/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "jax_tpu_embedding.sparsecore.__version__"}

[tool.setuptools.packages.find]
include = ["jax_tpu_embedding*"]

[tool.setuptools.package-data]
"*" = ["*.dylib", "*.so", "*.pyd"]

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
]
line-length = 80
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
ignore = [
    # Unnecessary collection call
    "C408",
    # Unnecessary map usage
    "C417",
    # Unnecessary dict comprehension for iterable
    "C420",
    # Object names too complex
    "C901",
    # Using `yield` and `return {value}` in a generator function can lead to confusing behavior
    "B901",
    # Class could be dataclass or namedtuple
    "B903",
    # Raise with from clause inside except block
    "B904",
    # Zip without explicit strict parameter
    "B905",
    # Unnecessary set/list comprehension inside functions
    "C403",
    "C409",
    "C416",
    "C419",
    # Unnecessary generator/list conversions
    "C401",
    "C413",
    "C414",
    # Redefinition of unused name
    "F811",
]
select = [
    "B9",
    "C",
    "F",
    "W",
    "YTT",
    "ASYNC",
    "E101",
    "E112",
    "E113",
    "E115",
    "E117",
    "E225",
    "E227",
    "E228",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pyrefly]
preset = "basic"
python-version = "3.12"
project-includes = [
    "jax_tpu_embedding/**/*.py*",
    "jax_tpu_embedding/**/*.ipynb",
]
ignore-missing-imports = [
    "absl.*",
    "einops.*",
    "flax.*",
    "google_benchmark.*",
    "jax.*",
    "jaxlib.*",
    "numpy.*",
    "portpicker.*",
    "setuptools.*",
]
untyped-def-behavior = "check-and-infer-return-any"
